  PySequence_Tuple().  Patch by Xiang Zhang.

- Issue #23908: os functions, open() and the io.FileIO constructor now reject
  unicode paths with embedded null character on Windows instead of silently
  truncating them.

- Issue #27514: Make having too many statically nested blocks a SyntaxError
  instead of SystemError.

Library
-------

- Issue #26470: Port ssl and hashlib module to OpenSSL 1.1.0.

- Issue #27944: Fix some memory-corruption bugs in the log reading code of the
  _hotshot module.

- Issue #27934: Use ``float.__repr__`` instead of plain ``repr`` when JSON-
  encoding an instance of a float subclass. Thanks Eddie James.

- Issue #27861: Fixed a crash in sqlite3.Connection.cursor() when a factory
  creates not a cursor.  Patch by Xiang Zhang.

- Issue #19884: Avoid spurious output on OS X with Gnu Readline.

- Issue #10513: Fix a regression in Connection.commit().  Statements should
  not be reset after a commit.

- Issue #2466: posixpath.ismount now correctly recognizes mount points which
  the user does not have permission to access.

- Issue #27783: Fix possible usage of uninitialized memory in operator.methodcaller.

- Issue #27774: Fix possible Py_DECREF on unowned object in _sre.

- Issue #27760: Fix possible integer overflow in binascii.b2a_qp.

- In the curses module, raise an error if window.getstr() or window.instr() is
  passed a negative value.

- Issue #27758: Fix possible integer overflow in the _csv module for large record
  lengths.

- Issue #23369: Fixed possible integer overflow in
  _json.encode_basestring_ascii.

- Issue #27568: Prevent HTTPoxy attack (CVE-2016-1000110). Ignore the
  HTTP_PROXY variable when REQUEST_METHOD environment is set, which indicates
  that the script is in CGI mode.

- Issue #27130: In the "zlib" module, fix handling of large buffers
  (typically 2 or 4 GiB).  Previously, inputs were limited to 2 GiB, and
  compression and decompression operations did not properly handle results of
  2 or 4 GiB.
